@@ -599,7 +599,7 @@ Default:
 * +pass:[&lt;forward&gt;]+: +pass:[forward]+
 * +pass:[=]+: +pass:[zoom]+
 * +pass:[?]+: +pass:[set-cmd-text ?]+
-* +pass:[@]+: +pass:[run-macro]+
+* +pass:[@]+: +pass:[macro-run]+
 * +pass:[B]+: +pass:[set-cmd-text -s :quickmark-load -t]+
 * +pass:[D]+: +pass:[tab-close -o]+
 * +pass:[F]+: +pass:[hint all tab]+
@@ -662,7 +662,7 @@ Default:
 * +pass:[o]+: +pass:[set-cmd-text -s :open]+
 * +pass:[pP]+: +pass:[open -- {primary}]+
 * +pass:[pp]+: +pass:[open -- {clipboard}]+
-* +pass:[q]+: +pass:[record-macro]+
+* +pass:[q]+: +pass:[macro-record]+
 * +pass:[r]+: +pass:[reload]+
 * +pass:[sf]+: +pass:[save]+
 * +pass:[sk]+: +pass:[set-cmd-text -s :bind]+
