@@ -174,6 +174,9 @@ Changed
   doing so is supported (QtWebEngine 5.15).
 - If `tabs.favicons.show` is set to `never`, favicons aren't unnecessarily
   downloaded anymore.
+- Renamed commands:
+  * `run-macro` -> `macro-run`
+  * `record-macro` -> `macro-record`
 - Various performance improvements, including for the startup time.
 
 Fixed
